--- a/hot.html
+++ b/hot.html
@@ -10,6 +10,7 @@
       window.ownerId = "5pqZD8hKwXa3DVHB7i6zf1QwGmJJ4Pj8EC1w7RMZ3kL9"
       window.collectionId = "sZi9grcsx1hVxNNkBNpV"
   </script>
+  <script src="script.js"></script>
   <script type="module" src="https://storage.googleapis.com/scriptslmt/0.1.3/solana.js"></script>
   <link rel="stylesheet" href="https://storage.googleapis.com/scriptslmt/0.1.3/solana.css">
 
@@ -48,7 +49,53 @@
       </div>
       
       <div id="mint-button-container"></div>
-    </section>
+<div class="upgrade-container">
+      <div class="box slide-in-left">
+     <div class="upgrade-infoleft">
+      <h2>Level 1</h2>
+      <p>Cost: 1 Upgrade card + 500 $CHAOS</p>
+      <p>Perks = 50 $CHAOS per day + Rename your squirrel</p></div>
+      </div>
+
+      <div class="box slide-in-right">
+        <div class="upgrade-inforight">
+         <h2>Level 2</h2>
+         <p>Cost: 2 Upgrade card + 500 $CHAOS</p>
+         <p>Perks = 75 $CHAOS per day + 0.05 $SOL lottery boost</p></div>
+         </div>
+
+         <div class="box slide-in-left">
+          <div class="upgrade-infoleft">
+           <h2>Level 3</h2>
+           <p>Cost: 3 Upgrade card + 500 $CHAOS</p>
+           <p>Perks = 125 $CHAOS per day + 0.10 $SOL lottery boost</p></div>
+           </div>
+
+           <div class="box slide-in-right">
+            <div class="upgrade-inforight">
+             <h2>Level 4</h2>
+             <p>Cost: 5 Upgrade card + 500 $CHAOS</p>
+             <p>Perks = 175 $CHAOS per day + AI your squirrel</p></div>
+             </div>
+
+             <div class="box slide-in-left">
+              <div class="upgrade-infoleft">
+               <h2>Level 5</h2>
+               <p>Cost: 10 Upgrade card + 500 $CHAOS</p>
+               <p>Perks = 250 $CHAOS per day + 0.15 $SOL lottery boost</p></div>
+               </div>
+
+               <div class="box slide-in-right">
+                <div class="upgrade-inforight">
+                 <h2>Level 6</h2>
+                 <p>Cost: 15 Upgrade card + 500 $CHAOS</p>
+                 <p>Perks = 250 $CHAOS per day + 0.5 $SOL lottery boost</p></div>
+                </div>
+</div>
+
+          </section>
+
+
     <footer>
       <div class="container">
         <div class="row">
