--- a/hot.html
+++ b/hot.html
@@ -24,15 +24,15 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li class="dropdown">
-            <a href="#">About</a>
+           <!-- <a href="#">About</a>
             <ul class="dropdown-menu">
               <li><a href="#">Team</a></li>
               <li><a href="#">FAQ</a></li>
-            </ul>
+            </ul>-->
           </li>
           <li><a href="#">What's Hot?</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+          <!--<li><a href="#">Contact</a></li>
+        </ul>-->
       </nav>
     </header>
     <section id="hero">
@@ -100,7 +100,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <p>&copy; 2023 My NFT Project. All Rights Reserved.</p>
+            <p>&copy; 2023 AISQ. All Rights Reserved.</p>
       </div>
     </footer>
     
