--- a/aisq-hot.html
+++ b/aisq-hot.html
@@ -128,7 +128,7 @@
   <div class="scroll-element js-scroll slide-left">
 <div class="upgrade-inforight">
                  <h2>Level 6</h2>
-                 <p><strong>Cost:</strong> 15 Upgrade card + 500&nbsp;$CHAOS</p>
+                 <p><strong>Cost:</strong> 15 Upgrade Credits + 500&nbsp;$CHAOS</p>
                  <p><strong>Perks:</strong> 250 $CHAOS per day + 0.5&nbsp;$SOL lottery boost</p></div>
   </div>
 </section>	
@@ -188,9 +188,9 @@ You can only advance one level at a time. To reach level 2, you must hold a leve
         
         <div class="gallery-image" style="max-width: 400px; text-align: left; margin-top: 0px; margin-bottom: 0px;">
         <ol>
-<li style="padding-bottom: 10px;">Obtain $CHAOS &amp Upgrade Cards</li>
+<li style="padding-bottom: 10px;">Obtain $CHAOS &amp; Upgrade Cards</li>
 
-<li style="padding-bottom: 10px;">Open an <a href="#" target="_blank">upgrade request ticket</a> in Discord</li>
+<li style="padding-bottom: 10px;">Open an <a href="https://discord.com/channels/1017495982226821273/1104895124703543296" target="_blank">upgrade request ticket</a> in Discord</li>
 
 <li style="padding-bottom: 10px;">Follow the instructions within the ticket. (You will be asked to send your Upgrade Cards and $CHAOS)</li>
 
@@ -210,7 +210,7 @@ You can only advance one level at a time. To reach level 2, you must hold a leve
     </section>
 	  
 	  
-	  <section class="throttle-container">
+<section class="throttle-container">
   <p style="display: none;">
     Scroll event is called <span id="scroll-count">0</span> times
   </p>
