--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
           <!--<li><a href="#">Contact</a></li>
         </ul>-->
       </ul></nav>
-    </header>
-	  
+    </header>	  
     <section id="hero" style="background: url(./images/aisq-header-bg-3.jpg); background-size: cover; background-repeat: no-repeat; min-height: 400px; background-position: center;">
-      <div class="hero-content" style="">
+      <div class="hero-content">
         <h2>Welcome to AISQ</h2>
         <p>Introducing AI Squirrels: Rename and customize your NFT, stake for $CHAOS rewards, and join weekly lotteries for a chance to win big! Plus, enjoy our custom raffle site, casino games, community events, and more.</p>
         <a href="https://discord.gg/34yrWsyGVp" class="hero-btn" target="_blank">Join Discord</a>
@@ -131,6 +130,19 @@
     </div>
   </div>
 </section>
+
+<!--Casino gallery-->
+
+    <section id="gallery" style="background-color: #252525;">
+      <div class="gallery-text"><h2>Stake for $CHAOS</h2></div>
+
+    	<div class="gallery-container">
+        <div class="gallery-image">
+        <img src="./images/chaos.png" alt="image 3">
+        </div>
+      </div>
+      <div class="gallery-btn-holder" style="padding-bottom: 40px;"><a href="https://staking.etakit.in/aisquirrels" class="gallery-btn" target="_blank">Stake Now!</a></div>
+    </section>
 
     <footer>
         <div class="container">
